  * Point debian/control Vcs fields to the new Git repository.
  * Switch debian/rules engine to dhmk based qt-kde-team/2/*.
  * Remove sequence number from debian/patches/*.
  * Drop ksvgtopng4.diff patch: no longer needed as KDE 3 is gone. Add
    conflicts with kdelibs4-dev and kdelibs-dbg, fix install file.
  * Disable testsuite.
  * Remove a link to common-licenses/BSD from debian/copyright.

  [ George Kiagiadakis ]
  * Change my email address in uploaders.
  * Refresh patches.
  * Update installed files.
  * Add Breaks/Replaces:
    - kdebase-runtime-data replaces kdelibs5-data << 4:4.5.0
      due to moved kcmremotewidgets data files.
    - kdebase-runtime replaces kdelibs5-plugins << 4:4.5.0 and
      kdelibs5 << 4:4.4.0 due to moved kcmremotewidgetshelper
      and kdontchangethehostname executables.
    - kdebase-runtime-dbg replaces kdelibs5-dbg << 4:4.5.0
      due to the moved executables mentioned above.
  * Bump build depedencies versions: kdelibs5-dev to version
    4:4.6 and libsoprano-dev to version 2.4.63.
  * Remove unused build dependencies:
    - libclucene-dev
    - libxcb1-dev
    - libqt4-opengl-dev
  * Re-wrap khelpcenter4's extended description to fix lintian warning.
  * Cleanup unused lintian overrides.

  [ José Manuel Santamaría Lema ]
  * Bump S-V to 3.9.1:
    - update Breaks/Replaces/Conflicts to conform to new policy.
  * Add Breaks/Replaces:
    - kdebase-runtime-data replaces plasma-widget-networkmanagement <=
      0.1~svn1175124-1 because they both install
      /usr/share/kde4/apps/desktoptheme/default/icons/network.svgz
    - kdebase-runtime-data replaces kdebase-workspace-bin (<< 4:4.5.95)
      because of /usr/share/kde4/services/kded/networkstatus.desktop
    - kdebase-runtime replaces plasma-netbook (<< 4:4.5.95)
      because of /usr/lib/kde4/plasma_containment_newspaper.so
  * Update installed files.
  * Call dh_xine in rules, kde-config-phonon-xine now depends on
    ${xine-x:Depends} (Closes: #575120)