@@ -36,7 +36,7 @@ Breaks: kdebase-bin (<< 4:4.2.90), kdelibs5 (<< 4:4.4.0), kdelibs-bin (<< 4:4.1.
 Conflicts: kdelibs4-dev
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends},
  kdebase-runtime-data (>= ${source:Version}), ${sameVersionDep:kdelibs5-plugins:kdebase-runtime},
- oxygen-icon-theme (>= 4:4.4), phonon-backend-xine | phonon-backend,
+ oxygen-icon-theme (>= 4:4.4),
  shared-desktop-ontologies, plasma-scriptengine-javascript (= ${binary:Version})
 Recommends: virtuoso-minimal
 Suggests: djvulibre-bin, icoutils
