@@ -13,6 +13,7 @@ kdebase-runtime (4:4.6.1-0r2) UNRELEASED; urgency=low
     conflicts with kdelibs4-dev and kdelibs-dbg, fix install file.
   * Disable testsuite.
   * Remove a link to common-licenses/BSD from debian/copyright.
+  * No longer do custom phonon setup.
 
   [ George Kiagiadakis ]
   * Change my email address in uploaders.
